# some-little-programms

./: LICENSE  README.md  bib.py  clash  clash.rs  clash.txt  poker.py
blog/: Cargo.toml
blog/src/: main.rs
buff/: last_session.tmux  log.csv
daily_todo/: main.tex
diario/: Cargo.toml
diario/src/: main.rs
ellissi_np/: README.md  answer.csv  ellissi_np.py  question.csv  results.csv
every_day_execution/: Cargo.toml
every_day_execution/src/: main.rs
generic/src/: io.rs  lib.rs
go_appunti/: README.md
insta/: followers1.html  following1.html  log.txt  main.py
latex_compile/: Cargo.toml
latex_compile/src/: main.rs
leetcode/src/: arithmetic_slices_subsequence.rs  longest_increasing_susequence.rs  main.rs  maximum_profit_job_scheduling.rs  merge_k_sorted_lists.rs  minimize_maximum_difference_pairs.rs  regex_match.rs
md_templates/: stand-up.md
music_vs_robot/: Cargo.toml
music_vs_robot/src/: main.rs
music_vs_robot/src/entity/: consts.rs  damage.rs  enemy.rs  enemy_w_tool.rs
music_vs_robot/src/playground/: cash.rs  consts.rs  timer.rs  (+3 more)
small/: GCD.py  README.md  bib.py  clash.rs  game1.py  primi.py  primi_in_rust  primi_in_rust.rs
small/prob-magic/: Cargo.toml
spotify/: Cargo.toml
spotify/src/: main  main.rs
studio/: Cargo.toml
studio/src/: main.rs  pausa.rs  show_data.rs
studio2/: Cargo.toml  log.csv
studio2/src/: log.rs  main.rs  pause.rs  report.rs  session.rs
typst/: main.typ
website/: 2023-11-01.html  2023-11-01.md  Cargo.toml
website/layout/: head.html
website/src/: daily_command.rs  main.rs  md_to_html.rs  service.rs
(+16 files in other folders)
