[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.31"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
pulldown-cmark = "0.9.3"
rayon = "1.8.0"
tokio = { version = "1", features = ["full"] }
